--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,7 +371,15 @@ endif()
 option(CPPINTEROP_INCLUDE_DOCS "Generate build targets for the CppInterOp docs.")
 option(CPPINTEROP_ENABLE_DOXYGEN "Use doxygen to generate CppInterOp interal API documentation.")
 option(CPPINTEROP_ENABLE_SPHINX "Use sphinx to generage CppInterOp user documentation")
-option(CPPINTEROP_ENABLE_TESTING "Enables the testing infrastructure." ON)
+
+
+if(EMSCRIPTEN)
+    message("Build with emscripten")
+    option(CPPINTEROP_ENABLE_TESTING "Enables the testing infrastructure." OFF)
+else()
+    message("Build with cmake")
+    option(CPPINTEROP_ENABLE_TESTING "Enables the testing infrastructure." ON)
+endif()
 
 if(MSVC)
 
