--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -42,6 +42,27 @@ jobs:
             llvm_enable_projects: "clang;lld"
             llvm_targets_to_build: "WebAssembly"
             emsdk_ver: "3.1.73"
+          - name: ubu24-arm-clang-repl-20-emscripten
+            os: ubuntu-24.04-arm
+            clang-runtime: '20'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
+          - name: osx15-arm-clang-repl-20-emscripten
+            os: macos-15
+            clang-runtime: '20'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
+          - name: ubu24-x86-clang-repl-20-emscripten
+            os: ubuntu-24.04
+            clang-runtime: '20'
+            cling: Off
+            llvm_enable_projects: "clang;lld"
+            llvm_targets_to_build: "WebAssembly"
+            emsdk_ver: "3.1.73"
 
     steps:
     - uses: actions/checkout@v4
@@ -212,7 +233,7 @@ jobs:
         else
           # Apply patches
           llvm_vers=$(echo "${{ matrix.clang-runtime }}" | tr '[:lower:]' '[:upper:]')
-          if [[ "${llvm_vers}" == "19" ]]; then
+          if [[ "${llvm_vers}" == "19" || "${llvm_vers}" == "20" ]]; then
             git apply -v ../patches/llvm/emscripten-clang${{ matrix.clang-runtime }}-*.patch
             echo "Apply emscripten-clang${{ matrix.clang-runtime }}-*.patch patches:"
           fi
@@ -384,6 +405,24 @@ jobs:
           - name: ubu24-arm-clang-repl-19-emscripten_wasm
             os: ubuntu-24.04-arm
             clang-runtime: '19'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.73"
+          - name: ubu24-x86-clang-repl-20-emscripten_wasm
+            os: ubuntu-24.04
+            clang-runtime: '20'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.73"
+          - name: osx15-arm-clang-repl-20-emscripten_wasm
+            os: macos-15
+            clang-runtime: '20'
+            cling: Off
+            micromamba_shell_init: bash
+            emsdk_ver: "3.1.73"
+          - name: ubu24-arm-clang-repl-20-emscripten_wasm
+            os: ubuntu-24.04-arm
+            clang-runtime: '20'
             cling: Off
             micromamba_shell_init: bash
             emsdk_ver: "3.1.73"
